--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html>
+  <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +13,7 @@
         align-items: center;
         background: linear-gradient(to top left, #28b487, #7dd56f);
       }
+
       h1 {
         font-family: sans-serif;
         font-size: 50px;
@@ -23,7 +25,11 @@
       }
     </style>
   </head>
+
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
   </body>
-</html>
+  <script src="./script.js"></script>
+  <script src="./assignments.js"></script>
+
+  </html>
