--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Bankist | When Banking meets Minimalist</title>
   </head>
   <body>
@@ -352,6 +353,5 @@
     </div>
     <div class="overlay hidden"></div>
 
-    <script src="script.js"></script>
   </body>
 </html>
