Finishng Section 14-OOP With All Challenges and i'll see another Instructor oop seciton to solidify my understanding again in the future

--- a/14-OOP/starter/index.html
+++ b/14-OOP/starter/index.html
@@ -21,8 +21,9 @@
         text-align: center;
         color: white;
       }
-    </style>
-    <script defer src="script.js"></script>
+      </style>
+    <!-- <script defer src="script.js"></script> -->
+    <script src="challenges.js" defer></script>
   </head>
   <body>
     <h1>Object Oriented Programming (OOP) With JavaScript</h1>
